--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ permalink: /contact/
   </h3>
 
  <p class="lead mt-4 mb-4">
-         E: <a href="#">support@everpayinc.com</a>
+         E: <a href="#">hello@everpayinc.com</a>
          <br>
          T: +1(800)566-6003
      </p>
@@ -68,7 +68,7 @@ permalink: /contact/
                                         <div class="block-body">
                                             <div class="icon-block--style-1-v5 text-center">
                                                 <div class="block-icon-lg c-gray-dark">
-                                                    <i class="icon-basic-smartphone"></i>
+                                                  <i data-feather="phone-call"></i> 
                                                 </div>
                                                 <div class="block-content mt-1">
                                                     <h3 class="heading heading-6 strong-600">
@@ -91,7 +91,7 @@ permalink: /contact/
                                         <div class="block-body">
                                             <div class="icon-block--style-1-v5 text-center">
                                                 <div class="block-icon-lg c-gray-dark">
-                                                    <i class="icon-basic-gear"></i>
+                                                <i data-feather="help-circle"></i> 
                                                 </div>
                                                 <div class="block-content mt-1">
                                                     <h3 class="heading heading-6 strong-600">
@@ -114,7 +114,7 @@ permalink: /contact/
                                         <div class="block-body">
                                             <div class="icon-block--style-1-v5 text-center">
                                                 <div class="block-icon-lg c-gray-dark">
-                                                    <i class="icon-basic-globe"></i>
+                                               <i data-feather="globe"></i> 
                                                 </div>
                                                 <div class="block-content mt-1">
                                                     <h3 class="heading heading-6 strong-600">
