--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@ permalink: /contact/
                                                         Lorem ipsum dolor sit amet consectetur adipiscing  eiusmod tempor.
                                                     </p>
                                                     <a href="#" class="link link-sm link--style-2 strong-600 c-gray-dark">
-                                                        sales@example.com
+                                                        sales@everpayinc.com
                                                     </a>
                                                 </div>
                                             </div>
