--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@ permalink: /contact/
                                     <div class="block block--style-3">
                                         <div class="block-body">
                                             <div class="icon-block--style-1-v5 text-center">
-                                                <div class="block-icon-lg c-gray-dark">
+                                                <div class="block-icon-sm c-gray-dark">
                                                   <i data-feather="phone-call"></i> 
                                                 </div>
                                                 <div class="block-content mt-1">
@@ -91,7 +91,7 @@ permalink: /contact/
                                         <div class="block-body">
                                             <div class="icon-block--style-1-v5 text-center">
                                                 <div class="block-icon-lg c-gray-dark">
-                                                <i data-feather="help-circle"></i> 
+                                                <i data-feather="cpu"></i> 
                                                 </div>
                                                 <div class="block-content mt-1">
                                                     <h3 class="heading heading-6 strong-600">
