--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@ permalink: /contact/
                                         <div class="block-body">
                                             <div class="icon-block--style-1-v5 text-center">
                                                 <div class="block-icon-lg c-gray-dark">
-                                                <i data-feather="cpu"></i> 
+                                                <i data-feather="fth-cog"></i> 
                                                 </div>
                                                 <div class="block-content mt-1">
                                                     <h3 class="heading heading-6 strong-600">
