--- a/index.html
+++ b/index.html
@@ -530,8 +530,9 @@ layout: default
                                     <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
                                         Let's create something wonderful together!
                                     </h2>
-                                    <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Purchase Boomerang</a>
-                                </div>
+                                <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5 mr-3">Try The Sandbox</a>
+                                <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Get Your Account</a>
+                              </div>
                             </div>
                         </div>
                     </section>
