--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ layout: default
                         <div class="container">
                 
                             <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown">
-                                <h3 class="section-title-inner text-normal strong-600">
+                                <h1 class="heading heading-1 c-gray-light text-uppercase strong-600">
                                     <span>Reasons to work with us</span>
-                                </h3>
+                                </h1>
                                 <span class="section-title-delimiter clearfix d-none"></span>
                             </div>
 
@@ -67,12 +67,12 @@ layout: default
                             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
                                 <div class="col-lg-6 order-lg-2 animate-on-scroll fadeIn" data-wow-delay="0.3s">
                                     <div class="feature feature--boxed-border floating-content float--width-200 sct-color-1 border-0 no-bg px-0">
-                                        <h1 class="heading heading-1 c-gray-light text-uppercase strong-600">
+                                        <h2 class="section-title-inner text-normal strong-600"">
                                             About our business
-                                        </h1>
-                                        <h2 class="heading heading-4 strong-600 mt-4">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.
                                         </h2>
+                                        <h3 class="heading heading-4 strong-600 mt-4">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.
+                                        </h3>
 
                                         <a href="homepage-video.html#" class="btn btn-styled btn-base-1 btn-circle mt-5">Learn more</a>
                                     </div>
