--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
                                                             Everpay for Startups is an innovative open payments company, focused on simplifying payments and golabl commerce under one single source.
                                                         </p>
 
-                                                        <a href="https://goo.gl/9BbH7R" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
+                                                        <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
                                                             See what we do
                                                         </a>
                                              </div>                  
@@ -70,7 +70,7 @@ layout: default
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.
                                         </h3>
                                                                                      
-                                <div class="fluid-paragraph-lg c-gray-light strong-300 text-center animate-on-scroll fadeInDown" data-wow-delay="0.3s">
+                                <div class="fluid-paragraph-lg c-gray-light strong-300 text-left animate-on-scroll fadeInDown" data-wow-delay="0.3s">
                                 Start building fast, beautiful and modern looking websites in no time using our theme.
                             </div>
 
@@ -110,7 +110,7 @@ layout: default
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.
                                         </h3>
                                                                                      
-                                <div class="fluid-paragraph-lg c-gray-light strong-300 text-center animate-on-scroll fadeInDown" data-wow-delay="0.3s">
+                                <div class="fluid-paragraph-lg c-gray-light strong-300 text-left animate-on-scroll fadeInDown" data-wow-delay="0.3s">
                                 Start building fast, beautiful and modern looking websites in no time using our theme.
                                 </div>
                       <a href="#" class="btn btn-styled btn-base-1 btn-circle mt-5">Learn more</a>
