--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 ---
-layout: default
+layout: page
 title: About
-permalink: /about/
+description: We put all the experience and know-how in Everpay so we can offer you the most versatile commerce solution.
+permalink: /about-us/
 ---
 
 <section class="slice-lg slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1491557670/bg-pattern-8_arr1zm.png); background-position: left center;">
