--- a/about.html
+++ b/about.html
@@ -1,37 +1,11 @@
 ---
-layout: page
+layout: about
 title: About
 description: We put all the experience and know-how in Everpay so we can offer you the most versatile commerce solution.
-permalink: /about-us/
+permalink: /about/
 ---
 
-<section class="slice-lg slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1491557670/bg-pattern-8_arr1zm.png); background-position: left center;">
-                        <span class="mask mask-dark--style-1"></span>
-                        <div class="container relative">
-                            <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center text-left">
-                                <div class="col-lg-5 col-md-6">
- <h1 class="heading heading-responsive heading-1 strong-500 c-white"> About EverPay</h1>
- <p class="lead line-height-1_8 strong-300 mt-4 c-white">
-             We put all the experience and know-how in Everpay so we can offer you the most versatile commerce solution.
-                                    </p>
-<a href="#" class="btn btn-styled btn-white btn-circle mt-5">Read the story</a>
-                                </div>
-<div class="col-md-6 ml-lg-auto">
-                                    <div class="block block-image-holder z-depth-3">
-                                        <div class="block-image">
-                                            <img src="/assets/images/prv/other/img-12-1000x900.jpg" class="img-fluid img-center">
-<a href="https://www.youtube.com/watch?v=zodT9bCdIiI" data-fancybox>
-                                                <span class="play-video">
-                                                    <i class="fa fa-play"></i>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
- </section>
-                    
+
  <section class="slice-xl sct-color-1" style="padding-bottom: 12em;">
                         <span class="mask mask-light--style-1"></span>
                         <div class="container">
