--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: default
                                <div class="col-lg-6 order-lg-1 animate-on-scroll fadeIn">
                                     <div class="block block-image-holder">
                                         <div class="block-image">
-                                            <img src="/assets/images/prv/other/img-15-1000x900.jpg" class="img-fluid">
+                                            <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1485938918/Mobile_v8dffa.png" class="img-fluid">
                                         </div>
                                     </div>
                                 </div>
@@ -97,7 +97,7 @@ layout: default
                                 <div class="col-lg-6 order-lg-2 animate-on-scroll fadeIn">
                                     <div class="block block-image-holder">
                                         <div class="block-image">
-                                            <img src="/assets/images/prv/other/img-15-1000x900.jpg" class="img-fluid">
+                                            <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1491559134/device-macbook-2_dbocag.png" class="img-fluid">
                                         </div>
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@ layout: default
                                <div class="col-lg-6 order-lg-1 animate-on-scroll fadeIn">
                                     <div class="block block-image-holder">
                                         <div class="block-image">
-                                            <img src="/assets/images/prv/other/img-15-1000x900.jpg" class="img-fluid">
+                                            <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/a_hflip,c_scale,w_424/a_0/v1457565441/hardware-mini-clover_ky2gh5.png" class="img-fluid">
                                         </div>
                                     </div>
                                 </div>
@@ -163,7 +163,7 @@ layout: default
                                 <div class="col-lg-9">
                                     <div class="text-center text-md-left">
                                         <h1 class="heading heading-4 c-base-text-1 text-normal strong-500">
-                                           Everpay <sup>3</sup> delivers content beyond the desktop. Make it yours!
+                                           Everpay <sup>3</sup> delivers paymenst beyond the desktop. Get started today!
                                         </h1>
                                     </div>
                                 </div>
