--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@ layout: default
 ---
 
 <section class="swiper-js-container background-image-holder" >
-                        <div class="swiper-container" data-swiper-autoplay="true" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
-                            <div class="swiper-wrapper">
-                                <!-- Slide -->
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light" data-vide-bg="/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
-                                        <span class="mask mask-base-1--style-2"></span>
+                        <div class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
+                        <span class="mask mask-dark--style-1 alpha-7"></span>
                                         <div class="container slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
-                                                            Grow your business with Everpay
+                                                           Secure and scale your business with Everpay
                                                         </h2>
                                                         <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
-                                                            Everpay for Startups is an innovative open payments company, focused on simplifying payments and golabl commerce under one single source.
+                                                            Everpay is an innovative open payments company, focusing on simplifying payments and uniting global commerce under one single source.
                                                         </p>
 
                                                         <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
@@ -30,7 +26,6 @@ layout: default
                                                 </div>
                                             </div>
                                                   
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
