--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<section class="swiper-js-container background-image-holder" >
-                        <div class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
+<section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
                         <span class="mask mask-dark--style-1 alpha-7"></span>
                                         <div class="container slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
@@ -25,8 +24,7 @@ layout: default
                                                     <img src="/assets/images/slider/elements/model-m-1.png" class="img-fluid img-center animated animation-ended" data-animation-in="fadeIn" data-animation-delay="200">
                                                 </div>
                                             </div>
-                                                  
-                                            </div>
+                                              
                                         </div>
                                     </div>
                                 </div>
