--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 layout: default
 ---
 
-<section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
-                        <span class="mask mask-dark--style-1 alpha-7"></span>
-                                        <div class="container slice--offset-top d-flex align-items-center">
+<section class="swiper-js-container background-image-holder">
+                        <div class="swiper-container" data-swiper-autoplay="true" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
+                            <div class="swiper-wrapper">
+                                <!-- Slide -->
+                                <div class="swiper-slide" data-swiper-autoplay="8000">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 350px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
+                                        <span class="mask mask-base-1--style-1"></span>
+                                        <div class="container container-lg slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
@@ -17,9 +22,14 @@ layout: default
 
                                                         <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
                                                             See what we do
-                                                        </a>
-                                             </div>                  
-
+                                                </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                                                 <div class="col-lg-5 ml-lg-auto align-self-end">
                                                     <img src="/assets/images/slider/elements/model-m-1.png" class="img-fluid img-center animated animation-ended" data-animation-in="fadeIn" data-animation-delay="200">
                                                 </div>
