--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ layout: default
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
                                     <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 350px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
-                                        <span class="mask mask-base-1--style-1"></span>
+                                        <span class="mask bg-base-1"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
-                                                           Secure and scale your business with Everpay
+                                                           Secure And Scale Your Business With Everpay
                                                         </h2>
                                                         <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
                                                             Everpay is an innovative open payments company, focusing on simplifying payments and uniting global commerce under one single source.
@@ -22,7 +22,7 @@ layout: default
 
                                                         <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
                                                             See what we do
-                                                </a>
+                                            </a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -30,14 +30,7 @@ layout: default
                                     </div>
                                 </div>
                             </div>
-                                                <div class="col-lg-5 ml-lg-auto align-self-end">
-                                                    <img src="/assets/images/slider/elements/model-m-1.png" class="img-fluid img-center animated animation-ended" data-animation-in="fadeIn" data-animation-delay="200">
-                                                </div>
-                                            </div>
-                                              
-                                </div>
-                            </div>
-
+                          
                             <div class="shape-container" data-shape-fill="sct-color-1" data-shape-position="bottom" style="height: 350px;">
                                 <svg class="shape-item" fill="" viewBox="0 0 1000 300" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M 0 246.131 C 0 246.131 31.631 250.035 47.487 249.429 C 65.149 248.755 82.784 245.945 99.944 241.732 C 184.214 221.045 222.601 171.885 309.221 166.413 C 369.892 162.581 514.918 201.709 573.164 201.709 C 714.375 201.709 772.023 48.574 910.547 21.276 C 939.811 15.509 1000 24.025 1000 24.025 L 1000 300.559 L -0.002 300.559 L 0 246.131 Z" />
@@ -451,7 +444,7 @@ layout: default
                         </div>
                     </section>
 
-                    <section class="slice-xl bg-base-1" style="padding-top: 350px; padding-bottom: 200px;">
+                    <section class="slice-xl bg-base-1" style="padding-top: 350px; padding-bottom: 100px;">
                         <div class="shape-container" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top" style="height: 350px;">
                             <svg class="shape-item" fill="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">
                             <path d="M 1000 299 l 2 -279 c -155 -36 -310 135 -415 164 c -102.64 28.35 -149 -32 -232 -31 c -80 1 -142 53 -229 80 c -65.54 20.34 -101 15 -126 11.61 v 54.39 z"></path> <path d="M 1000 286 l 2 -252 c -157 -43 -302 144 -405 178 c -101.11 33.38 -159 -47 -242 -46 c -80 1 -145.09 54.07 -229 87 c -65.21 25.59 -104.07 16.72 -126 10.61 v 22.39 z"></path> <path d="M 1000 300 l 1 -230.29 c -217 -12.71 -300.47 129.15 -404 156.29 c -103 27 -174 -30 -257 -29 c -80 1 -130.09 37.07 -214 70 c -61.23 24 -108 15.61 -126 10.61 v 22.39 z"></path>
