--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
                                     <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 350px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
-                                        <span class="mask bg-base-1"></span>
+                                        <span class="mask mask-base-1--style-6"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
