--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ layout: default
                     <section class="slice-lg sct-color-1">
                         <div class="container">
                             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
-                                <div class="col-lg-5 order-lg-2 animate-on-scroll fadeIn">
+                                <div class="col-lg-6 order-lg-2 animate-on-scroll fadeIn">
                                     <div class="block block-image-holder">
                                         <div class="block-image">
                                             <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1491559134/device-macbook-2_dbocag.png" class="img-fluid">
@@ -96,7 +96,7 @@ layout: default
                                     </div>
                                 </div>
 
-                                <div class="col-lg-7 order-lg-1 animate-on-scroll fadeIn" data-wow-delay="0.3s">
+                                <div class="col-lg-6 order-lg-1 animate-on-scroll fadeIn" data-wow-delay="0.3s">
                                     <div class="feature feature--boxed-border floating-content float--width-200 sct-color-1 border-0 no-bg px-0">
                                         <h2 class="section-title-inner text-normal strong-600">
                                           The Services We Provide
@@ -105,7 +105,7 @@ layout: default
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.
                                         </h3>
                                                                                      
-                                <div class="fluid-paragraph-lg mt-2 c-gray-light strong-300 text-left animate-on-scroll fadeInDown" data-wow-delay="0.3s">
+                                <div class="mt-2 c-gray-light strong-300 text-left animate-on-scroll fadeInDown" data-wow-delay="0.3s">
                                 Start building fast, beautiful and modern looking websites in no time using our theme.
                                 </div>
                                 
