--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: default
 
                     <section class="slice-lg sct-color-1">
                         <div class="container">
-                            <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
+                            <div class="row cols-xs-space cols-sm-space cols-md-space align-items-right">
                                 <div class="col-lg-6 order-lg-2 animate-on-scroll fadeIn">
                                     <div class="block block-image-holder">
                                         <div class="block-image">
@@ -97,7 +97,7 @@ layout: default
                                 </div>
 
                                 <div class="col-lg-6 order-lg-1 animate-on-scroll fadeIn" data-wow-delay="0.3s">
-                                    <div class="feature feature--boxed-border floating-content float--width-200 sct-color-1 border-0 no-bg px-0">
+                                    <div class="feature feature--boxed-border floating-content float--left sct-color-1 border-0 no-bg px-0">
                                         <h2 class="section-title-inner text-normal strong-600">
                                           The Services We Provide
                                         </h2>
