--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
                                                            Secure And Scale Your Business With Everpay
                                                         </h2>
                                                         <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
-                                                            Everpay is an innovative open payments company, focusing on simplifying payments and uniting global commerce under one single source.
+                                                            Everpay is an innovative open payments company, focusing on simplifying global payments and unifing big commerce under one single secure source.
                                                         </p>
 
                                                         <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
@@ -45,7 +45,7 @@ layout: default
                 
                             <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown">
                                 <h1 class="heading heading-1 c-gray-light strong-600">
-                                    <span>Reasons to work with us</span>
+                                    <span>Top Reasons to Work With Us</span>
                                 </h1>
                                 <span class="section-title-delimiter clearfix d-none"></span>
                             </div>
