--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 350px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 280px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
                                         <span class="mask mask-base-1--style-6"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
-                                                <div class="row cols-xs-space cols-sm-space cols-md-space">
+                                                <div class="row cols-xs-space cols-sm-space cols-md-space mt-3">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
                                                            Secure And Scale Your Business With Everpay
@@ -31,7 +31,7 @@ layout: default
                                 </div>
                             </div>
                           
-                            <div class="shape-container" data-shape-fill="sct-color-1" data-shape-position="bottom" style="height: 350px;">
+                            <div class="shape-container" data-shape-fill="sct-color-1" data-shape-position="bottom" style="height: 325px;">
                                 <svg class="shape-item" fill="" viewBox="0 0 1000 300" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M 0 246.131 C 0 246.131 31.631 250.035 47.487 249.429 C 65.149 248.755 82.784 245.945 99.944 241.732 C 184.214 221.045 222.601 171.885 309.221 166.413 C 369.892 162.581 514.918 201.709 573.164 201.709 C 714.375 201.709 772.023 48.574 910.547 21.276 C 939.811 15.509 1000 24.025 1000 24.025 L 1000 300.559 L -0.002 300.559 L 0 246.131 Z" />
 
