--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ layout: default
                     </section>                
 
 <div class="sct-color-1">
- <span class="delimiter vd--2 bg-base-1 mt-5" data-position="top"></span>
+ <span class="mt-5"></span>
  </div>   
 
 <section class="slice-sm bg-base-1">
