--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ layout: default
  <span class="delimiter vd--2 bg-base-1 mt-5" data-position="top"></span>
  </div>    
                                                                                         
-                    <section class="slice-md sct-color-1">
+                    <section class="slice-md sct-color-1 mb-5">
                         <div class="container">
                                <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
                                 <div class="col-lg-7 order-lg-2 animate-on-scroll fadeIn" data-wow-delay="0.3s">
@@ -146,7 +146,7 @@ layout: default
                                 </div>
                               
                                <div class="col-lg-5 order-lg-1 animate-on-scroll fadeIn">
-                                    <div class="block block-image-holder">
+                                    <div class="block block-image-holder mb-5">
                                         <div class="block-image">
                                             <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/a_hflip,c_scale,w_424/a_0/v1457565441/hardware-mini-clover_ky2gh5.png" class="img-fluid">
                                         </div>
