--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ layout: default
                                 <div class="col-lg-3">
                                     <div class="text-center text-lg-right">
                                         <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline">
-                                            Purchase now
+                                          Get Started
                                         </a>
                                     </div>
                                 </div>
@@ -276,8 +276,29 @@ layout: default
                         </div>
                     </section>
 
-
-
+<section class="pb-4">
+                        <div class="row-fluid">
+                            <div class="slice px-4 bg-base-1 rounded">
+                                <div class="px-4 sct-inner">
+                                    <div class="row justify-content-center cols-xs-space cols-sm-space cols-md-space">
+                                        <div class="col-lg-7">
+                                            <div class="text-center">
+                                                <h1 class="heading heading-inverse heading-2 text-normal strong-400 ">
+                                                    We don't like big words. We like to deliver great products!
+                                                </h1>
+                                                <p class="mt-4 text-lg line-height-1_8">
+                                                    No matter you are a developer or new to web design, you will find our theme very easy to customize with an intuitive HTML markup.
+                                                </p>
+                                                <a href="homepage-9.html#" class="btn btn-styled btn-white btn-circle mt-4">
+                                                    Try it now!
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                     <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/video.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
                         <span class="mask mask-dark--style-1 alpha-7"></span>
@@ -380,6 +401,8 @@ layout: default
                             </div>
                         </div>
                     </section>
+
+
             <section class="slice-xl bg-base-1" style="padding-top: 350px; padding-bottom: 100px;">
                         <div class="shape-container" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top" style="height: 350px;">
                             <svg class="shape-item" fill="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">
